# PX4_ROS2_DroneControl

./: .gitignore  CONTRIBUTING.md  README.md  bridge_cameras.sh  diagnose_and_fix.sh  fix_arming.sh  fix_px4_params.sh  install_web_gcs_deps.sh  start_camera_bridge.sh  start_clean.sh  start_drone_gui.sh  start_fixed.sh  start_web_gcs_complete.sh  start_with_offboard.sh  test_all_features.sh  test_gui.sh
docs/: CAMERA_FIX_AND_GCS_GUIDE.md  CAMERA_SETUP.md  FLIGHT_SEQUENCE_GUIDE.md  INSTALLED_PACKAGES.md  QUICK_REFERENCE.md  README.md  SOLUTION_SUMMARY.md  START_HERE.md  TROUBLESHOOTING.md  WEB_GCS_FINAL_STATUS.md  WEB_GCS_GUIDE.md  WEB_GCS_READY.md  WEB_GCS_REMOTE_CONTROL_GUIDE.md
images/: README.md
src/drone_control_gui/: README.md  package.xml  setup.py
src/drone_control_gui/drone_control_gui/: camera_bridge.py  drone_controller.py  main_window.py
src/drone_control_gui/drone_control_gui/widgets/: camera_widget.py  depth_widget.py  joystick_widget.py  status_widget.py  waypoint_widget.py
src/drone_control_gui/launch/: gui_control.launch.py
src/web_gcs/: package.xml  setup.cfg  setup.py
src/web_gcs/web_gcs/: gcs_server.py
src/web_gcs/web_gcs/templates/: index.html
