<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>web_gcs</name>
  <version>1.0.0</version>
  <description>Professional Web-based Ground Control Station for PX4</description>
  <maintainer email="andresislas99@outlook.com">andres</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
